fixed reponsive video container

--- a/reel.html
+++ b/reel.html
@@ -71,7 +71,7 @@
     <section class="section pt-3">
       <div class="container">
         <div class="item web col-sm-12 col-md-12 col-lg-12 mb-0" data-aos="fade-up">
-          <div class="img-fluid">
+          <div class="video-container">
             <iframe src="https://player.vimeo.com/video/601745167" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
           </div>
         </div>
