Bug fixes and performance improvements

--- a/about.html
+++ b/about.html
@@ -68,11 +68,11 @@
   <main id="main">
 
     <!-- ======= About Section ======= -->
-    <section class="section pt-5">
+    <section class="section pt-5 pb-3">
       <div class="container">
         <div class="row">
           <div class="col-md-4 ml-auto order-2" data-aos="fade-up">
-            <h3 class="h3 mb-4">Skills</h3>
+            <h3 class="h3 heading mb-4">Skills</h3>
             <ul class="list-unstyled">
               <li class="mb-3">
                 <div class="d-flex mb-1">
@@ -147,7 +147,7 @@
     </section><!-- End About Section -->
     
     <!-- ======= Clients Section ======= -->
-    <section class="section pt-0 pb-5">
+    <section class="section pt-3 pb-5">
       <div class="container" data-aos="fade-up">
         <div class="row align-items-end">
             <h3 class="h3 heading">Selected Clients</h3>
