--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="project-1.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Boxed Water</h3>
-                <span>Web</span>
+                <h3>Hello Friends!</h3>
+                <span></span>
               </div>
-              <img class="img-fluid" src="assets/img/coming-soon.png">
+              <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 09.webp">
             </a>
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
