--- a/reel.html
+++ b/reel.html
@@ -68,7 +68,7 @@
   <main id="main">
 
     <!-- ======= Reel Section ======= -->
-    <section class="section pt-3">
+    <section class="section pt-3 pb-5">
       <div class="container">
         <div class="item web col-sm-12 col-md-12 col-lg-12 mb-0" data-aos="fade-up">
           <div class="video-container">
@@ -88,8 +88,7 @@
             <br>• 00:27 - 00:29 : Design and Animation
             <br>• 00:30 - 00:33 : Animation
             <br>• 00:34 - 00:36 : Design and Animation
-            <br>• 00:37 - 00:41 : Character Rigging and Animation
-            <br>• 00:42 - 00:45 : Design and Animation</p>
+            <br>• 00:37 - 00:41 : Character Rigging and Animation</p>
         </div>
       </div>
     </section><!-- End Reel Section -->
