--- a/project-1.html
+++ b/project-1.html
@@ -67,7 +67,7 @@
 
   <main id="main">
     <!-- ======= Overview Section ======= -->
-    <section class="section pt-3 pb-5">
+    <section class="section pt-3 pb-3">
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
@@ -81,10 +81,12 @@
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-              <img src="assets/img/Reel Thumbnail.jpg" alt="Image" class="img-fluid">
+              <div class="video-container">
+                <iframe src="https://player.vimeo.com/video/481770486?h=2761ee6e59" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+              </div>
             </div>
             <div class="col-md-3 ml-auto pt-5" data-aos="fade-up" data-aos-delay="100">
-              <h3 class="h3">Credits</h3>
+              <h3 class="h3 heading">Credits</h3>
               <div class="mb-3">
                 <strong>Storyboard, Design and Animation -</strong>
                 <span>Navin Kumar</span>
@@ -103,7 +105,7 @@
     </section><!-- End Overview Section -->
 
     <!-- ======= Brief Concept Section ======= -->
-    <section class="section pt-0 pb-3">
+    <section class="section pt-3 pb-3">
       <div class="container" data-aos="fade-up">
         <div class="row align-items-end">
             <h3 class="h3 heading">Brief Concept</h3>
@@ -124,31 +126,31 @@
 
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 01.webp">
+            <img class="img-fluid" src="assets/img/no-image.jpg">
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 02.webp">
+            <img class="img-fluid" src="assets/img/no-image.jpg">
           </div>
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 03.webp">
+            <img class="img-fluid" src="assets/img/no-image.jpg">
           </div>
           <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 04.webp">
+            <img class="img-fluid" src="assets/img/no-image.jpg">
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 05.webp">
+            <img class="img-fluid" src="assets/img/no-image.jpg">
           </div>
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 06.webp">
+            <img class="img-fluid" src="assets/img/no-image.jpg">
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 07.webp">
+            <img class="img-fluid" src="assets/img/no-image.jpg">
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 08.webp">
+            <img class="img-fluid" src="assets/img/no-image.jpg">
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 09.webp">
+            <img class="img-fluid" src="assets/img/no-image.jpg">
           </div>
         </div>
       </div>
@@ -208,13 +210,19 @@
 
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 01.webp">
+            <div class="video-container">
+              <video autoplay loop><source src="assets/video/Hello Friends/BTS 01.mp4"></video>
+            </div>
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 02.webp">
+            <div class="video-container">
+              <video autoplay loop><source src="assets/video/Hello Friends/BTS 02.mp4"></video>
+            </div>
           </div>
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 03.webp">
+            <div class="video-container">
+              <video autoplay loop><source src="#"></video>
+            </div>
           </div>
         </div>
       </div>
