--- a/project-2.html
+++ b/project-2.html
@@ -71,8 +71,8 @@
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
-            <h2>Hello Friends!</h2>
-            <p>This video is a brief introduction about my services and also the first project. I made this video to reach out to my potential clients.</p>
+            <h2>Heading</h2>
+            <p>Description</p>
           </div>
         </div>
       </div>
@@ -107,7 +107,7 @@
       <div class="container" data-aos="fade-up">
         <div class="row align-items-end">
             <h3 class="h3 heading">Brief Concept</h3>
-            <p>The idea was to create an informative video for explaining the market need for Product & Explainer Videos. I have used variety of different graphic style to showcase my skills. I have also applied the 12 basic principles of animation to make it look more dynamic.</p>
+            <p>Description - Enter your text</p>
         </div>
       </div>
     </section><!-- End Brief Concept Section -->
@@ -166,31 +166,31 @@
 
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 01.webp">
+            <img class="img-fluid" src="assets/img/no-image.jpg">
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 02.webp">
+            <img class="img-fluid" src="assets/img/no-image.jpg">
           </div>
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 03.webp">
+            <img class="img-fluid" src="assets/img/no-image.jpg">
           </div>
           <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 04.webp">
+            <img class="img-fluid" src="assets/img/no-image.jpg">
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 05.webp">
+            <img class="img-fluid" src="assets/img/no-image.jpg">
           </div>
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 06.webp">
+            <img class="img-fluid" src="assets/img/no-image.jpg">
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 07.webp">
+            <img class="img-fluid" src="assets/img/no-image.jpg">
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 08.webp">
+            <img class="img-fluid" src="assets/img/no-image.jpg">
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 09.webp">
+            <img class="img-fluid" src="assets/img/no-image.jpg">
           </div>
         </div>
       </div>
@@ -208,14 +208,19 @@
 
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 01.webp">
+            <div class="video-container">
+              <video autoplay loop><source src="#"></video>
+            </div>
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 02.webp">
+            <div class="video-container">
+              <video autoplay loop><source src="#"></video>
+            </div>
           </div>
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 03.webp">
-          </div>
+            <div class="video-container">
+              <video autoplay loop><source src="#"></video>
+            </div>
         </div>
       </div>
     </section><!-- End Animation Section -->
