minor updates and bug fixes

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
       <div class="row">
         <div class="col-md-5 d-none d-md-block">
           <h3>Hire Me</h3>
-          <p>Get a faster response by sending detailed information upfront.(e.g. client, budget, timeframe, storyboard/sketches, NDA)<br><a href="#">navinkrworks@gmail.com</a></p>
+          <p>Get a faster response by sending detailed information upfront.(e.g. client, budget, timeframe, storyboard/sketches, NDA)<br><a href="mailto:navinkrworks@gmail.com">navinkrworks@gmail.com</a></p>
         </div>
         <div class="col-md-7">
           <ul class="custom-menu">
@@ -140,7 +140,7 @@
             <h3>Work with me:</h3>
             <p>Get a faster response by sending detailed information upfront.<br>(e.g. client, budget, timeframe, storyboards/sketches, NDA)</p>
             <strong>Email -</strong>
-            <span>navinkrworks@gmail.com</span>
+            <a href="mailto:navinkrworks@gmail.com">navinkrworks@gmail.com</a>
           </div>
         </div>
       </div>
@@ -185,7 +185,6 @@
             <h2>Contact</h2>
             <p class="mb-0">Don't hesitate to reach out.<br>Got a question? Have a fun project or just want to say hello?<br>Well, you've come to right place my friend!</p>
           </div>
-    
         </div>
     
         <div class="row">
