--- a/project-3.html
+++ b/project-3.html
@@ -41,7 +41,7 @@
       <div class="row">
         <div class="col-md-5 d-none d-md-block">
           <h3>Hire Me</h3>
-          <p>Get a faster response by sending detailed information upfront.(e.g. client, budget, timeframe, storyboard/sketches, NDA)<br><a href="#">navinkrworks@gmail.com</a></p>
+          <p>Get a faster response by sending detailed information upfront.(e.g. client, budget, timeframe, storyboard/sketches, NDA)<br><a href="mailto:navinkrworks@gmail.com">navinkrworks@gmail.com</a></p>
         </div>
         <div class="col-md-7">
           <ul class="custom-menu">
@@ -71,8 +71,8 @@
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
-            <h2>Hello Friends!</h2>
-            <p>This video is a brief introduction about my services and also the first project. I made this video to reach out to my potential clients.</p>
+            <h2>Heading</h2>
+            <p>Description</p>
           </div>
         </div>
       </div>
@@ -106,8 +106,8 @@
     <section class="section pt-0 pb-3">
       <div class="container" data-aos="fade-up">
         <div class="row align-items-end">
-            <h3 class="h3 heading">Brief Concept</h3>
-            <p>The idea was to create an informative video for explaining the market need for Product & Explainer Videos. I have used variety of different graphic style to showcase my skills. I have also applied the 12 basic principles of animation to make it look more dynamic.</p>
+          <h3 class="h3 heading">Brief Concept</h3>
+          <p>Description - Enter your text</p>
         </div>
       </div>
     </section><!-- End Brief Concept Section -->
@@ -166,31 +166,31 @@
 
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 01.webp">
+            <img class="img-fluid" src="assets/img/no-image.jpg">
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 02.webp">
+            <img class="img-fluid" src="assets/img/no-image.jpg">
           </div>
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 03.webp">
+            <img class="img-fluid" src="assets/img/no-image.jpg">
           </div>
           <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 04.webp">
+            <img class="img-fluid" src="assets/img/no-image.jpg">
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 05.webp">
+            <img class="img-fluid" src="assets/img/no-image.jpg">
           </div>
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 06.webp">
+            <img class="img-fluid" src="assets/img/no-image.jpg">
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 07.webp">
+            <img class="img-fluid" src="assets/img/no-image.jpg">
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 08.webp">
+            <img class="img-fluid" src="assets/img/no-image.jpg">
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 09.webp">
+            <img class="img-fluid" src="assets/img/no-image.jpg">
           </div>
         </div>
       </div>
@@ -208,13 +208,19 @@
 
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 01.webp">
+            <div class="video-container">
+              <video autoplay loop><source src="#"></video>
+            </div>
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 02.webp">
+            <div class="video-container">
+              <video autoplay loop><source src="#"></video>
+            </div>
           </div>
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 03.webp">
+            <div class="video-container">
+              <video autoplay loop><source src="#"></video>
+            </div>
           </div>
         </div>
       </div>
