--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="row">
         <div class="col-md-5 d-none d-md-block">
           <h3>Hire Me</h3>
-          <p>Get a faster response by sending detailed information upfront.(e.g. client, budget, timeframe, storyboard/sketches, NDA)<br><a href="#">navinkrworks@gmail.com</a></p>
+          <p>Get a faster response by sending detailed information upfront.(e.g. client, budget, timeframe, storyboard/sketches, NDA)<br><a href="mailto:navinkrworks@gmail.com">navinkrworks@gmail.com</a></p>
         </div>
         <div class="col-md-7">
           <ul class="custom-menu">
@@ -99,7 +99,7 @@
             <a href="project-1.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Hello Friends!</h3>
-                <span></span>
+                <!--span>Sub-heading</span-->
               </div>
               <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 09.webp">
             </a>
@@ -107,8 +107,8 @@
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="project-2.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Build Indoo</h3>
-                <span>Photography</span>
+                <h3>Heading</h3>
+                <!--span>Sub-heading</span-->
               </div>
               <img class="img-fluid" src="assets/img/coming-soon.png">
             </a>
@@ -116,35 +116,35 @@
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="project-3.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Cocooil</h3>
-                <span>Branding</span>
+                <h3>Heading</h3>
+                <!--span>Sub-heading</span-->
               </div>
               <img class="img-fluid" src="assets/img/coming-soon.png">
             </a>
           </div>
           <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="project-1.html" class="item-wrap fancybox">
+            <a href="#" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Nike Shoe</h3>
-                <span>Design</span>
+                <h3>Heading</h3>
+                <!--span>Sub-heading</span-->
               </div>
               <img class="img-fluid" src="assets/img/coming-soon.png">
             </a>
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="project-1.html" class="item-wrap fancybox">
+            <a href="#" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Kitchen Sink</h3>
-                <span>Photography</span>
+                <h3>Heading</h3>
+                <!--span>Sub-heading</span-->
               </div>
               <img class="img-fluid" src="assets/img/coming-soon.png">
             </a>
           </div>
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="project-1.html" class="item-wrap fancybox">
+            <a href="#" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Amazon</h3>
-                <span>branding</span>
+                <h3>Heading</h3>
+                <!--span>Sub-heading</span-->
               </div>
               <img class="img-fluid" src="assets/img/coming-soon.png">
             </a>
