--- a/project-2.html
+++ b/project-2.html
@@ -41,7 +41,7 @@
       <div class="row">
         <div class="col-md-5 d-none d-md-block">
           <h3>Hire Me</h3>
-          <p>Get a faster response by sending detailed information upfront.(e.g. client, budget, timeframe, storyboard/sketches, NDA)<br><a href="#">navinkrworks@gmail.com</a></p>
+          <p>Get a faster response by sending detailed information upfront.(e.g. client, budget, timeframe, storyboard/sketches, NDA)<br><a href="mailto:navinkrworks@gmail.com">navinkrworks@gmail.com</a></p>
         </div>
         <div class="col-md-7">
           <ul class="custom-menu">
@@ -106,8 +106,8 @@
     <section class="section pt-0 pb-3">
       <div class="container" data-aos="fade-up">
         <div class="row align-items-end">
-            <h3 class="h3 heading">Brief Concept</h3>
-            <p>Description - Enter your text</p>
+          <h3 class="h3 heading">Brief Concept</h3>
+          <p>Description - Enter your text</p>
         </div>
       </div>
     </section><!-- End Brief Concept Section -->
@@ -221,6 +221,7 @@
             <div class="video-container">
               <video autoplay loop><source src="#"></video>
             </div>
+          </div>
         </div>
       </div>
     </section><!-- End Animation Section -->
