--- a/reel.html
+++ b/reel.html
@@ -41,7 +41,7 @@
       <div class="row">
         <div class="col-md-5 d-none d-md-block">
           <h3>Hire Me</h3>
-          <p>Get a faster response by sending detailed information upfront.(e.g. client, budget, timeframe, storyboard/sketches, NDA)<br><a href="#">navinkrworks@gmail.com</a></p>
+          <p>Get a faster response by sending detailed information upfront.(e.g. client, budget, timeframe, storyboard/sketches, NDA)<br><a href="mailto:navinkrworks@gmail.com">navinkrworks@gmail.com</a></p>
         </div>
         <div class="col-md-7">
           <ul class="custom-menu">
