minor updates and bug fixes

--- a/index.html
+++ b/index.html
@@ -164,12 +164,11 @@
           <div class="swiper-slide">
             <div class="testimonial-wrap">
               <div class="testimonial">
-                <img src="assets/img/person_1.jpg" alt="Image" class="img-fluid">
+                <img src="assets/img/blank-profile-pic.png" alt="Image" class="img-fluid">
                 <blockquote>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-                    explicabo inventore.</p>
+                  <p>Description</p>
                 </blockquote>
-                <p>&mdash; Jean Hicks</p>
+                <p>&mdash; Name</p>
               </div>
             </div>
           </div><!-- End testimonial item -->
@@ -177,12 +176,11 @@
           <div class="swiper-slide">
             <div class="testimonial-wrap">
               <div class="testimonial">
-                <img src="assets/img/person_2.jpg" alt="Image" class="img-fluid">
+                <img src="assets/img/blank-profile-pic.png" alt="Image" class="img-fluid">
                 <blockquote>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-                    explicabo inventore.</p>
+                  <p>Description</p>
                 </blockquote>
-                <p>&mdash; Chris Stanworth</p>
+                <p>&mdash; Name</p>
               </div>
             </div>
           </div><!-- End testimonial item -->
@@ -202,11 +200,11 @@
           <p class="mb-1">&copy; Navin Kumar. All Rights Reserved</p>
         </div>
         <div class="col-sm-6 social text-md-end">
-          <a href="#"><span class="bi bi-behance"></span></a>
-          <a href="#"><span class="bi bi-dribbble"></span></a>
-          <a href="#"><span class="bi bi-instagram"></span></a>
-          <a href="#"><span class="bi bi-linkedin"></span></a>
-          <a href="#"><span class="bi bi-vimeo"></span></a>
+          <a href="https://www.behance.net/navin-kumar" target="_blank"><span class="bi bi-behance"></span></a>
+          <a href="https://dribbble.com/navinmotion" target="_blank"><span class="bi bi-dribbble"></span></a>
+          <a href="https://www.instagram.com/navinmotion" target="_blank"><span class="bi bi-instagram"></span></a>
+          <a href="https://www.linkedin.com/in/navinkrprasad" target="_blank"><span class="bi bi-linkedin"></span></a>
+          <a href="https://vimeo.com/navinmotion" target="_blank"><span class="bi bi-vimeo"></span></a>
         </div>
       </div>
     </div>
