--- a/reel.html
+++ b/reel.html
@@ -103,11 +103,11 @@
           <p class="mb-1">&copy; Navin Kumar. All Rights Reserved</p>
         </div>
         <div class="col-sm-6 social text-md-end">
-          <a href="#"><span class="bi bi-behance"></span></a>
-          <a href="#"><span class="bi bi-dribbble"></span></a>
-          <a href="#"><span class="bi bi-instagram"></span></a>
-          <a href="#"><span class="bi bi-linkedin"></span></a>
-          <a href="#"><span class="bi bi-vimeo"></span></a>
+          <a href="https://www.behance.net/navin-kumar" target="_blank"><span class="bi bi-behance"></span></a>
+          <a href="https://dribbble.com/navinmotion" target="_blank"><span class="bi bi-dribbble"></span></a>
+          <a href="https://www.instagram.com/navinmotion" target="_blank"><span class="bi bi-instagram"></span></a>
+          <a href="https://www.linkedin.com/in/navinkrprasad" target="_blank"><span class="bi bi-linkedin"></span></a>
+          <a href="https://vimeo.com/navinmotion" target="_blank"><span class="bi bi-vimeo"></span></a>
         </div>
       </div>
     </div>
