--- a/project-1.html
+++ b/project-1.html
@@ -82,7 +82,7 @@
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
               <div class="video-container">
-                <iframe src="https://player.vimeo.com/video/481770486?h=2761ee6e59" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                <iframe src="https://player.vimeo.com/video/481770486" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
               </div>
             </div>
             <div class="col-md-3 ml-auto pt-5" data-aos="fade-up" data-aos-delay="100">
