--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         </div>
         <div class="col-md-7">
           <ul class="custom-menu">
-            <li class="active"><a href="index.html">Work</a></li>
-            <li><a href="about.html">About</a></li>
+            <li class="active"><a href="./">Work</a></li>
+            <li><a href="./about">About</a></li>
           </ul>
         </div>
       </div>
