--- a/project-2.html
+++ b/project-2.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/logo-nm-favicon.png" rel="icon">
-  <link href="assets/img/logo-nm-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/logo-nk-favicon.png" rel="icon">
+  <link href="assets/img/logo-nk-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -57,7 +57,7 @@
     <div class="container">
         <div class="navbar-brand">
           <a href="index.html">
-          <img class="img-fluid" src="assets/img/logo-nm.png" width="12%"></a>
+          <img class="img-fluid" src="assets/img/logo-nk.png" width="12%"></a>
         </div>
         <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
           <span></span>
