--- a/reel.html
+++ b/reel.html
@@ -57,7 +57,7 @@
     <div class="container">
         <div class="navbar-brand">
           <a href="index.html">
-          <img class="img-fluid" src="assets/img/logo-nk.png" width="12%"></a>
+          <img class="logo" src="assets/img/logo-nk.png"></a>
         </div>
         <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
           <span></span>
@@ -80,7 +80,7 @@
         </div>
       </div>
       <div class="container" data-aos="fade-up">
-        <div class="row align-items-end">
+        <div class="row1 align-items-end">
             <p>• 00:00 - 00:07 : Design and Animation
             <br>• 00:08 - 00:20 : Character Rigging and Animation
             <br>• 00:21 - 00:22 : Design and Animation
@@ -99,15 +99,15 @@
   <footer class="footer" role="contentinfo">
     <div class="container">
       <div class="row">
-        <div class="col-sm-6">
-          <p class="mb-1">&copy; Navin Kumar. All Rights Reserved</p>
-        </div>
-        <div class="col-sm-6 social text-md-end">
+        <div class="col-sm-6 social">
           <a href="https://www.behance.net/navin-kumar" target="_blank"><span class="bi bi-behance"></span></a>
           <a href="https://dribbble.com/navinmotion" target="_blank"><span class="bi bi-dribbble"></span></a>
           <a href="https://www.instagram.com/navinmotion" target="_blank"><span class="bi bi-instagram"></span></a>
           <a href="https://www.linkedin.com/in/navinkrprasad" target="_blank"><span class="bi bi-linkedin"></span></a>
           <a href="https://vimeo.com/navinmotion" target="_blank"><span class="bi bi-vimeo"></span></a>
+        </div>
+        <div class="">
+          <p class="mb-1">&copy; Navin Kumar. All Rights Reserved</p>
         </div>
       </div>
     </div>
