--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Navin | Motion Designer</title>
+  <title>Navin | Animator</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -14,7 +14,9 @@
   <link href="assets/img/logo-nk-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -22,8 +24,11 @@
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css"
+    integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
 
   <!-- =======================================================
   * Template Name: MyPortfolio - v4.7.0
@@ -36,12 +41,15 @@
 <body>
 
   <!-- ======= Navbar ======= -->
+
+
   <div class="collapse navbar-collapse custom-navmenu" id="main-navbar">
     <div class="container py-2 py-md-5">
       <div class="row">
         <div class="col-md-5 d-none d-md-block">
           <h3>Hire Me</h3>
-          <p>Get a faster response by sending detailed information upfront.(e.g. client, budget, timeframe, storyboard/sketches, NDA)<br><a href="mailto:navinkrworks@gmail.com">navinkrworks@gmail.com</a></p>
+          <p>Get a faster response by sending detailed information upfront.(e.g. client, budget, timeframe,
+            storyboard/sketches, NDA)<br><a href="mailto:navinkrworks@gmail.com">navinkrworks@gmail.com</a></p>
         </div>
         <div class="col-md-7">
           <ul class="custom-menu">
@@ -53,22 +61,25 @@
     </div>
   </div>
 
+
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-        <div class="navbar-brand">
-          <a href="index.html">
-          <img class="img-fluid" src="assets/img/logo-nk.png" width="12%"></a>
-        </div>
-        <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
-          <span></span>
-        </a>
+      <div class="navbar-brand">
+        <a href="index.html">
+          <img class="logo" src="assets/img/logo-nk.png"></a>
+      </div>
+      <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
+        <span></span>
+      </a>
     </div>
   </nav>
 
+
   <!-- ======= Main Section ======= -->
-  <main id="main">
-    <!-- ======= Reel Section ======= -->
-    <section class="section pt-3">
+  <!-- <main id="main"> -->
+  <!-- ======= Reel Section ======= -->
+  <section class="section pt-3">
+    <div class="motion">
       <div class="container">
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up">
           <div class="item web col-sm-12 col-md-12 col-lg-12 mb-0">
@@ -80,84 +91,219 @@
               <img class="img-fluid" src="assets/img/Reel Thumbnail.jpg">
             </a>
           </div>
-        </div>  
+        </div>
       </div>
-    </section><!-- End Reel Section -->
+    </div>
+  </section><!-- End Reel Section -->
 
-    <!-- ======= Gallery Section ======= -->
-    <section class="section site-portfolio pt-0">
-      <div class="container">
-        <div class="row mb-5 align-items-center">
-          <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up" data-aos-delay="200">
-            <h2>Featured Showcase</h2>
-            <p class="mb-0">Character Animation|Explainer Video|Motion Design</p>
+  <!-- ======= Gallery Section ======= -->
+  <section class="section site-portfolio pt-0">
+    <div class="container">
+      <div class="row mb-5 align-items-center">
+        <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up" data-aos-delay="200">
+          <h2 class="gap">Featured Showcase</h2>
+          <!-- <p class="mb-0">Character Animation|Explainer Video|Motion Design</p> -->
+        </div>
+      </div>
+
+
+
+      <!--Committed Changes on 22-08-2023-->
+      <div class="box" data-aos="fade-up" data-aos-delay="200">
+        <button class="tablink" onclick="openPage('AI', this, '#323946')" id="defaultOpen"><img
+            src="assets/img/robot.png" class="pic"><span class="text">&nbsp&nbspAI Art</span></button>
+        <button class="tablink" id="btn1" onclick="openPage('Animation', this, '#323946')"><img
+            src="assets/img/animation_pic.png" class="pic"><span class="text">&nbsp&nbspAnimation</span></button>
+        <button class="tablink" onclick="openPage('Video', this, '#323946')"><img src="assets/img/video_edit.png"
+            class="pic"><span class="text">&nbsp&nbspVideo Editing</span></button>
+
+        <div id="AI" class="tabcontent">
+          <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
+            <!-- <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4"> -->
+            <main>
+              <div class="container_grid">
+
+              </div>
+            </main>
+            <script src="assets/js/imageGrid.js"></script>
+            <script src="assets/js/gridItems.js"></script>
+
+            <style>
+              * {
+                margin: 0;
+                padding: 0;
+                box-sizing: border-box;
+                color: white;
+                /* font-family: 'Titillium Web', sans-serif; */
+              }
+
+              /* html,
+                body {
+                  overflow: hidden;
+                  background-color: #000000;
+                } */
+
+              main {
+                position: relative;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                /* overflow: scroll; */
+              }
+
+              .header {
+                position: relative;
+                width: 100%;
+                height: 100px;
+                display: flex;
+                align-items: center;
+                padding: 0 2vw;
+                z-index: 10;
+                background-color: #161616;
+                opacity: 1;
+              }
+
+              .container_grid {
+                position: relative;
+                width: 100%;
+                display: flex;
+                gap: 10px;
+                /* padding: 10px 2vw; */
+              }
+            </style>
+            <!-- </div> -->
           </div>
         </div>
 
-        <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
-          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="project-1.html" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>Hello Friends!</h3>
-                <!--span>Sub-heading</span-->
-              </div>
-              <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 09.webp">
-            </a>
+
+        <div id="Animation" class="tabcontent">
+          <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
+            <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
+              <a href="animation/project-1.html" class="item-wrap fancybox">
+                <div class="work-info">
+                  <h3>Hello Friends!</h3>
+                  <!--span>Sub-heading</span-->
+                </div>
+                <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 09.webp">
+              </a>
+            </div>
+            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
+              <a href="animation/project-2.html" class="item-wrap fancybox">
+                <div class="work-info">
+                  <h3>Heading</h3>
+                  <!--span>Sub-heading</span-->
+                </div>
+                <img class="img-fluid" src="assets/img/coming-soon.png">
+              </a>
+            </div>
+            <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+              <a href="animation/project-3.html" class="item-wrap fancybox">
+                <div class="work-info">
+                  <h3>Heading</h3>
+                  <!--span>Sub-heading</span-->
+                </div>
+                <img class="img-fluid" src="assets/img/coming-soon.png">
+              </a>
+            </div>
+            <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
+              <a href="#" class="item-wrap fancybox">
+                <div class="work-info">
+                  <h3>Heading</h3>
+                  <!--span>Sub-heading</span-->
+                </div>
+                <img class="img-fluid" src="assets/img/coming-soon.png">
+              </a>
+            </div>
+            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
+              <a href="#" class="item-wrap fancybox">
+                <div class="work-info">
+                  <h3>Heading</h3>
+                  <!--span>Sub-heading</span-->
+                </div>
+                <img class="img-fluid" src="assets/img/coming-soon.png">
+              </a>
+            </div>
+            <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+              <a href="#" class="item-wrap fancybox">
+                <div class="work-info">
+                  <h3>Heading</h3>
+                  <!--span>Sub-heading</span-->
+                </div>
+                <img class="img-fluid" src="assets/img/coming-soon.png">
+              </a>
+            </div>
           </div>
-          <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="project-2.html" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>Heading</h3>
-                <!--span>Sub-heading</span-->
-              </div>
-              <img class="img-fluid" src="assets/img/coming-soon.png">
-            </a>
-          </div>
-          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="project-3.html" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>Heading</h3>
-                <!--span>Sub-heading</span-->
-              </div>
-              <img class="img-fluid" src="assets/img/coming-soon.png">
-            </a>
-          </div>
-          <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="#" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>Heading</h3>
-                <!--span>Sub-heading</span-->
-              </div>
-              <img class="img-fluid" src="assets/img/coming-soon.png">
-            </a>
-          </div>
-          <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="#" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>Heading</h3>
-                <!--span>Sub-heading</span-->
-              </div>
-              <img class="img-fluid" src="assets/img/coming-soon.png">
-            </a>
-          </div>
-          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="#" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>Heading</h3>
-                <!--span>Sub-heading</span-->
-              </div>
-              <img class="img-fluid" src="assets/img/coming-soon.png">
-            </a>
+        </div>
+
+        <div id="Video" class="tabcontent">
+          <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
+            <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
+              <a href="video/project-1.html" class="item-wrap fancybox">
+                <div class="work-info">
+                  <h3>Secrets of Serpents</h3>
+                  <!--span>Sub-heading</span-->
+                </div>
+                <img class="img-fluid" src="assets/img/serpents.jpg">
+              </a>
+            </div>
+            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
+              <a href="video/project-2.html" class="item-wrap fancybox">
+                <div class="work-info">
+                  <h3>Power of Dreams</h3>
+                  <!--span>Sub-heading</span-->
+                </div>
+                <img class="img-fluid" src="assets/img/dreams.jpg">
+              </a>
+            </div>
+            <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+              <a href="video/project-3.html" class="item-wrap fancybox">
+                <div class="work-info">
+                  <h3>Sadhguru meets Wrestlers</h3>
+                  <!--span>Sub-heading</span-->
+                </div>
+                <img class="img-fluid" src="assets/img/wrestling.jpg">
+              </a>
+            </div>
+            <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
+              <a href="video/project-4.html" class="item-wrap fancybox">
+                <div class="work-info">
+                  <h3>Are Geniuses Born or Made?</h3>
+                  <!--span>Sub-heading</span-->
+                </div>
+                <img class="img-fluid" src="assets/img/Beethoven.jpg">
+              </a>
+            </div>
+            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
+              <a href="video/project-5.html" class="item-wrap fancybox">
+                <div class="work-info">
+                  <h3>A Walk for Soil</h3>
+                </div>
+                <img class="img-fluid" src="assets/img/A Walk for Soil.png">
+              </a>
+            </div>
+            <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+              <a href="video/project-6.html" class="item-wrap fancybox">
+                <div class="work-info">
+                  <h3>Save Soil</h3>
+                  <!--span>Sub-heading</span-->
+                </div>
+                <img class="img-fluid" src="assets/img/Save Soil (16-9).png">
+              </a>
+            </div>
           </div>
         </div>
       </div>
-    </section><!-- End Gallery Section -->
-    
-  </main><!-- End #main -->
+
+    </div>
+  </section><!-- End Gallery Section -->
+
+  <!-- </main> -->
+  <!-- End #main -->
 
   <!-- ======= Testimonials Section ======= -->
   <section class="section pt-0">
-    <div class="container">
+    <div class="container" id="container">
       <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
         <div class="swiper-wrapper">
 
@@ -171,7 +317,7 @@
                 <p>&mdash; Name</p>
               </div>
             </div>
-          </div><!-- End testimonial item -->
+          </div>
 
           <div class="swiper-slide">
             <div class="testimonial-wrap">
@@ -183,34 +329,35 @@
                 <p>&mdash; Name</p>
               </div>
             </div>
-          </div><!-- End testimonial item -->
+          </div>
 
         </div>
         <div class="swiper-pagination"></div>
       </div>
-
     </div>
-  </section><!-- End Testimonials Section -->
+  </section>
+  <!-- End Testimonials Section -->
 
   <!-- ======= Footer ======= -->
   <footer class="footer" role="contentinfo">
     <div class="container">
       <div class="row">
-        <div class="col-sm-6">
-          <p class="mb-1">&copy; Navin Kumar. All Rights Reserved</p>
-        </div>
-        <div class="col-sm-6 social text-md-end">
+        <div class="col-sm-6 social">
           <a href="https://www.behance.net/navin-kumar" target="_blank"><span class="bi bi-behance"></span></a>
           <a href="https://dribbble.com/navinmotion" target="_blank"><span class="bi bi-dribbble"></span></a>
           <a href="https://www.instagram.com/navinmotion" target="_blank"><span class="bi bi-instagram"></span></a>
           <a href="https://www.linkedin.com/in/navinkrprasad" target="_blank"><span class="bi bi-linkedin"></span></a>
           <a href="https://vimeo.com/navinmotion" target="_blank"><span class="bi bi-vimeo"></span></a>
         </div>
+        <div class="">
+          <p class="mb-1">&copy; Navin Kumar. All Rights Reserved</p>
+        </div>
       </div>
     </div>
   </footer>
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/aos/aos.js"></script>
