--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
 </head>
 
 <body>
-
   <!-- ======= Navbar ======= -->
 
 
@@ -53,8 +52,8 @@
         </div>
         <div class="col-md-7">
           <ul class="custom-menu">
-            <li class="active"><a href="index.html">Work</a></li>
-            <li><a href="about.html">About</a></li>
+            <li class="active"><a href="/">Work</a></li>
+            <li><a href="/about">About</a></li>
           </ul>
         </div>
       </div>
@@ -65,7 +64,7 @@
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
       <div class="navbar-brand">
-        <a href="index.html">
+        <a href="/">
           <img class="logo" src="assets/img/logo-nk.png"></a>
       </div>
       <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
@@ -78,12 +77,13 @@
   <!-- ======= Main Section ======= -->
   <!-- <main id="main"> -->
   <!-- ======= Reel Section ======= -->
+
   <section class="section pt-3">
     <div class="motion">
       <div class="container">
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up">
           <div class="item web col-sm-12 col-md-12 col-lg-12 mb-0">
-            <a href="reel.html" class="item-wrap fancybox">
+            <a href="/reel" class="item-wrap fancybox">
               <div class="reel-info">
                 <h3>Demo Reel</h3>
                 <span>2022</span>
@@ -349,7 +349,7 @@
           <a href="https://www.linkedin.com/in/navinkrprasad" target="_blank"><span class="bi bi-linkedin"></span></a>
           <a href="https://vimeo.com/navinmotion" target="_blank"><span class="bi bi-vimeo"></span></a>
         </div>
-        <div class="">
+        <div>
           <p class="mb-1">&copy; Navin Kumar. All Rights Reserved</p>
         </div>
       </div>
