--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <div id="Animation" class="tabcontent">
           <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
             <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="animation/project-1.html" class="item-wrap fancybox">
+              <a href="animation/project-1" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>Hello Friends!</h3>
                   <!--span>Sub-heading</span-->
@@ -189,7 +189,7 @@
               </a>
             </div>
             <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="animation/project-2.html" class="item-wrap fancybox">
+              <a href="animation/project-2" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>Heading</h3>
                   <!--span>Sub-heading</span-->
@@ -198,7 +198,7 @@
               </a>
             </div>
             <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="animation/project-3.html" class="item-wrap fancybox">
+              <a href="animation/project-3" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>Heading</h3>
                   <!--span>Sub-heading</span-->
@@ -239,7 +239,7 @@
         <div id="Video" class="tabcontent">
           <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
             <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="video/project-1.html" class="item-wrap fancybox">
+              <a href="video/project-1" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>Secrets of Serpents</h3>
                   <!--span>Sub-heading</span-->
@@ -248,7 +248,7 @@
               </a>
             </div>
             <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="video/project-2.html" class="item-wrap fancybox">
+              <a href="video/project-2" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>Power of Dreams</h3>
                   <!--span>Sub-heading</span-->
@@ -257,7 +257,7 @@
               </a>
             </div>
             <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="video/project-3.html" class="item-wrap fancybox">
+              <a href="video/project-3" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>Sadhguru meets Wrestlers</h3>
                   <!--span>Sub-heading</span-->
@@ -266,7 +266,7 @@
               </a>
             </div>
             <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="video/project-4.html" class="item-wrap fancybox">
+              <a href="video/project-4" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>Are Geniuses Born or Made?</h3>
                   <!--span>Sub-heading</span-->
@@ -275,7 +275,7 @@
               </a>
             </div>
             <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="video/project-5.html" class="item-wrap fancybox">
+              <a href="video/project-5" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>A Walk for Soil</h3>
                 </div>
@@ -283,7 +283,7 @@
               </a>
             </div>
             <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="video/project-6.html" class="item-wrap fancybox">
+              <a href="video/project-6" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>Save Soil</h3>
                   <!--span>Sub-heading</span-->
