--- a/about/index.html
+++ b/about/index.html
@@ -50,7 +50,7 @@
         <div class="col-md-7">
           <ul class="custom-menu">
             <li><a href="/">Work</a></li>
-            <li class="active"><a href="/about">About</a></li>
+            <li class="active"><a href="../about">About</a></li>
           </ul>
         </div>
       </div>
