--- a/reel/index.html
+++ b/reel/index.html
@@ -46,7 +46,7 @@
         <div class="col-md-7">
           <ul class="custom-menu">
             <li><a href="/">Work</a></li>
-            <li><a href="/about">About</a></li>
+            <li><a href="../about">About</a></li>
           </ul>
         </div>
       </div>
