--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
+
+
+  <meta property="og:title" content="Navin | Animator">
+  <meta property="og:description" content="An independent 2D Animator based in India, loves to bring inanimate objects to
+  life with vibrant colors, shapes and motion">
+  <meta property="og:image" content="assets/img/logo-nk-favicon.png">
+  <meta property="og:image:width" content="30">
+  <meta property="og:image:height" content="40">
+  <!-- <meta property="og:url" content="https://navinkr.com/"> -->
+
+
   <!-- Favicons -->
   <link href="assets/img/logo-nk-favicon.png" rel="icon">
   <link href="assets/img/logo-nk-touch-icon.png" rel="apple-touch-icon">
