--- a/about/index.html
+++ b/about/index.html
@@ -37,7 +37,7 @@
 
 <body>
 
-  
+
   <!-- ======= Navbar ======= -->
   <div class="collapse navbar-collapse custom-navmenu" id="main-navbar">
     <div class="container py-2 py-md-5">
@@ -61,7 +61,8 @@
     <div class="container">
       <div class="navbar-brand">
         <a href="/">
-          <img class="logo" src="../assets/img/logo-nk.png"></a>
+          <img class="logo" src="../assets/img/logo-nk.png" width="10%"></a>
+        </a>
       </div>
       <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
         <span></span>
@@ -75,8 +76,107 @@
     <section class="section pt-5 pb-3">
       <div class="container">
         <div class="row">
-          <div class="col-md-4 ml-auto order-2" data-aos="fade-up">
-            <h3 class="h3 heading mb-4">Skills</h3>
+          <div class="col-md-6 order-2" data-aos="fade-up">
+            <h2 class="greet">Namaskar!</h2>
+            <p>My name is Navin Kumar, an independent 2D Animator based in India. I love to bring inanimate objects to
+              life
+              with vibrant colors, shapes and motion.</p>
+            <p>I help brands, creatives and small businesses to spice up their work with animated explainer videos,
+              short
+              commercial ads & storytelling videos.</p>
+            <p>As a passionate and motivated professional, I'm constantly striving to improve my techniques, expand my
+              skillset and find new opportunities to grow. Each of my projects - both solo and collaborative - have
+              provided
+              this growth and allowed me to establish myself within this competitive industry. Please enjoy my
+              portfolio,
+              and feel free to get in touch with any questions.</p>
+            <h3>Work with me:</h3>
+            <p>Get a faster response by sending detailed information upfront.<br>(e.g. client, budget, timeframe,
+              storyboards/sketches, NDA)</p>
+            <strong>Email -</strong>
+            <a href="mailto:navinkrworks@gmail.com">navinkrworks@gmail.com</a>
+          </div>
+
+          <div class="col-md-6 mb-5 mb-md-0" data-aos="fade-up">
+            <div class="aspect-ratio-box">
+              <img src="../assets/img/Navin.png" alt="Image" class="img-fluid">
+            </div>
+          </div>
+
+
+        </div>
+      </div>
+    </section><!-- End About Section -->
+
+    <!-- ======= Clients Section ======= -->
+    <section class="section pt-3 pb-5">
+      <div class="container" data-aos="fade-up">
+        <div class="row align-items-end">
+          <h3 class="h3 heading">Selected Clients</h3>
+          <p>Blessed and grateful to work with some amazing clients - an experience that has added value to my career
+            and joy to my heart.<br>Here are some of them.</p>
+        </div>
+        <div class="row">
+          <div class="col-4 col-sm-4 col-md-2">
+            <a href="#" class="client-logo">
+              <h4>Isha Foundation</h4>
+            </a>
+          </div>
+          <div class="col-4 col-sm-4 col-md-2">
+            <a href="#" class="client-logo">
+              <h4 class="test">Post Office Studios</h4>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section><!-- End Clients Section -->
+
+    <!-- ======= Contact Section ======= -->
+    <section class="section pt-5 pb-3">
+      <div class="container" id="test">
+        <div class="row">
+          <div class="col-md-6 order-2 mb-5" data-aos="fade-up">
+            <h2>Contact</h2>
+            <p>Don't hesitate to reach out. Got a question? Have a fun project or just want to say hello? Well, you've
+              come to right place my friend!</p>
+
+            <form action="../forms/contact.php" method="post" role="form" class="php-email-form">
+
+              <div class="row gy-3">
+                <div class="col-md-6 form-group">
+                  <label for="name">Name</label>
+                  <input type="text" name="name" class="form-control" id="name" required>
+                </div>
+                <div class="col-md-6 form-group">
+                  <label for="name">Email</label>
+                  <input type="email" class="form-control" name="email" id="email" required>
+                </div>
+                <div class="col-md-12 form-group">
+                  <label for="name">Subject</label>
+                  <input type="text" class="form-control" name="subject" id="subject" required>
+                </div>
+                <div class="col-md-12 form-group">
+                  <label for="name">Message</label>
+                  <textarea class="form-control" name="message" cols="30" rows="10" required></textarea>
+                </div>
+
+                <div class="col-md-12 my-3">
+                  <div class="loading">Loading</div>
+                  <div class="error-message"></div>
+                  <div class="sent-message">Your message has been sent. Thank you!</div>
+                </div>
+
+                <div class="col-md-6 mt-0 form-group">
+                  <input type="submit" class="readmore d-block w-100" value="Send Message">
+                </div>
+              </div>
+
+            </form>
+          </div>
+
+          <div class="col-md-6 mb-5" data-aos="fade-up">
+
+            <h2>Skills</h2>
             <ul class="list-unstyled">
               <li class="mb-3">
                 <div class="d-flex mb-1">
@@ -150,105 +250,8 @@
               </li>
             </ul>
           </div>
-
-          <div class="col-md-7 mb-5 mb-md-0" data-aos="fade-up">
-            <p><img src="../assets/img/Navin.png" alt="Image" class="img-fluid"></p>
-          </div>
-        </div>
-        <div data-aos="fade-up">
-          <h2 class="greet">Namaskar!</h2>
-          <p>My name is Navin Kumar, an independent 2D Animator based in India. I love to bring inanimate objects to
-            life
-            with vibrant colors, shapes and motion.</p>
-          <p>I help brands, cretaives and small businesses to spice up their work with animated explainer videos, short
-            commercial ads & storytelling vidoes.</p>
-          <p>As a passionate and motivated professional, I'm constantly striving to improve my techniques, expand my
-            skillset and find new opportunities to grow. Each of my projects - both solo and collaborative - have
-            provided
-            this growth and allowed me to establish myself within this competitive industry. Please enjoy my portfolio,
-            and feel free to get in touch with any questions.</p>
-          <h3>Work with me:</h3>
-          <p>Get a faster response by sending detailed information upfront.<br>(e.g. client, budget, timeframe,
-            storyboards/sketches, NDA)</p>
-          <strong>Email -</strong>
-          <a href="mailto:navinkrworks@gmail.com">navinkrworks@gmail.com</a>
-        </div>
-      </div>
-    </section><!-- End About Section -->
-
-    <!-- ======= Clients Section ======= -->
-    <section class="section pt-3 pb-5">
-      <div class="container" data-aos="fade-up">
-        <div class="row align-items-end">
-          <h3 class="h3 heading">Selected Clients</h3>
-          <p>Blessed and grateful to work with some amazing clients - an experience that has added value to my career
-            and joy to my heart.<br>Here are some of them.</p>
-        </div>
-        <div class="row">
-          <div class="col-4 col-sm-4 col-md-2">
-            <a href="#" class="client-logo">
-              <h4>Isha Foundation</h4>
-            </a>
-          </div>
-          <div class="col-4 col-sm-4 col-md-2">
-            <a href="#" class="client-logo">
-              <h4 class="test">Post Office Studios</h4>
-            </a>
-          </div>
-        </div>
-      </div>
-    </section><!-- End Clients Section -->
-
-    <!-- ======= Contact Section ======= -->
-    <section class="section pt-0 pb-5">
-      <div class="container">
-
-        <div class="row mb-5 align-items-end">
-          <div class="col-md-6" data-aos="fade-up">
-            <h2>Contact</h2>
-            <p class="mb-0">Don't hesitate to reach out.<br>Got a question? Have a fun project or just want to say
-              hello?<br>Well, you've come to right place my friend!</p>
-          </div>
         </div>
 
-        <div class="row">
-          <div class="col-md-6 mb-5 mb-md-0" data-aos="fade-up">
-
-            <form action="../forms/contact.php" method="post" role="form" class="php-email-form">
-
-              <div class="row gy-3">
-                <div class="col-md-6 form-group">
-                  <label for="name">Name</label>
-                  <input type="text" name="name" class="form-control" id="name" required>
-                </div>
-                <div class="col-md-6 form-group">
-                  <label for="name">Email</label>
-                  <input type="email" class="form-control" name="email" id="email" required>
-                </div>
-                <div class="col-md-12 form-group">
-                  <label for="name">Subject</label>
-                  <input type="text" class="form-control" name="subject" id="subject" required>
-                </div>
-                <div class="col-md-12 form-group">
-                  <label for="name">Message</label>
-                  <textarea class="form-control" name="message" cols="30" rows="10" required></textarea>
-                </div>
-
-                <div class="col-md-12 my-3">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
-                </div>
-
-                <div class="col-md-6 mt-0 form-group">
-                  <input type="submit" class="readmore d-block w-100" value="Send Message">
-                </div>
-              </div>
-
-            </form>
-
-          </div>
-        </div>
       </div>
     </section><!-- End Contact Section -->
 
