--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 margin: 0;
                 padding: 0;
                 box-sizing: border-box;
-                color: white;
+                /* color: white; */
                 /* font-family: 'Titillium Web', sans-serif; */
               }
 
@@ -360,8 +360,8 @@
           <a href="https://www.linkedin.com/in/navinkrprasad" target="_blank"><span class="bi bi-linkedin"></span></a>
           <a href="https://vimeo.com/navinmotion" target="_blank"><span class="bi bi-vimeo"></span></a>
         </div>
-        <div>
-          <p class="mb-1">&copy; Navin Kumar. All Rights Reserved</p>
+        <div class="">
+          <p class="mb-1">&copy; <span class="name">Navin Kumar.</span> All Rights Reserved</p>
         </div>
       </div>
     </div>
